--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.idea
+/.idea
 .idea/
 clip_base
 clip_base/
@@ -24,33 +24,33 @@ torch_extra
 torch_extra/
 *.png
 *.bash
-
-base_model.py
-collective.py
-config_utils.py
-config.py
-CVPR2024-GAFL-top.png
-dataset.py
-Dockerfile
-eval_net_gr.py
-evaluation_cad.bash
-evaluation_vol.bash
-gcn_model.py
-infer_model_original.py
-infer_model_prev.py
-infer_model.py
+/config.py
+/base_model.py
+/collective.py
+/config_utils.py
+/CVPR2024-GAFL-top.png
+/dataset.py
+/Dockerfile
+/eval_net_gr.py
+/evaluation_cad.bash
+/evaluation_vol.bash
+/gcn_model.py
+/infer_model_original.py
+/infer_model_prev.py
+/infer_model.py
 *.md
-backbone
-backbone/
+/backbone
+/backbone/
 
-requirements.txt
-test.py
-train_net_dynamic.py
-train_net_stage1_gr.py
-train_net_stage2_gr.py
-train_net_stage3_gr.py
-train_net.py
-train_tracker.py
-train_tracker2.py
-utils.py
-volleyball.py
+/requirements.txt
+/test.py
+/train_net_dynamic.py
+/train_net_stage1_gr.py
+/train_net_stage2_gr.py
+/train_net_stage3_gr.py
+/train_net.py
+/train_tracker.py
+/train_tracker2.py
+/utils.py
+/volleyball.py
+/test
