--- a/configs/model.yaml
+++ b/configs/model.yaml
@@ -1,7 +1,4 @@
 loss:
-  ot: 1 # 0.05-> 0.1 -> 0.5->1->0
-  kl: .0 # 0.1 -> 0.5 -> 1.0->0.1->0
-  video: .1 # 0.01->0.02->0.1->0
   adt:
   # cross entropy
     cls: .1
@@ -10,18 +7,17 @@ loss:
     rel: 1.
   cls: 1.
   spe: 
-    margin: .2
+    margin: .01
     weight: 1.
   rec: 1.
-  pri: 1.5
+  pri: 1.
   tot: 1.
   com: 1.
   cos:
     margin: 0.3
 
-batchsize: 4 
 temp: 0.1
-dropout: 0.2
+dropout: 0.1
 eps: 1e-5
 transformer:
   layers: 4
@@ -66,7 +62,7 @@ adapter:
   pj:
     indims: 512
     outdims: 768
-    eps: 1e-12
+    eps: 1e-5
     dropout: 0.1
 
 tse:
@@ -81,7 +77,6 @@ gpnn:
   layer: 
     private: 4
     common: 3
-
   pj:
     layer: 3
   enc_layer: 2
