--- a/configs/model.yaml
+++ b/configs/model.yaml
@@ -1,8 +1,8 @@
 loss:
   adt:
   # cross entropy
-    cls: .1
-    cls_max: .1
+    cls: 1.
+    cls_max: 1.
   # binary cross entropy
     rel: 1.
   cls: 1.
@@ -10,10 +10,12 @@ loss:
     margin: .2
     weight: 1.0
     max_mar: .7
+    mw: 1.
   rec: 
     margin: .2
     weight: 1.0
     max_mar: .7
+    mw: 1.
   pri: 1.
   tot: 1.
   com: 1.
